2004-12-21  David N. Welton  <davidw@dedasys.com>

	* generic/TclMagick.c (wandObjCmd): Return errors on failure for
	image compare methods.

2004-12-20  David N. Welton  <davidw@dedasys.com>

	* generic/TclMagick.c (myMagickError): Use package name function
	to generate error messages.
	(wandObjCmd): Fixed bug that was causing AnnotateImage to not
	function properly.

2004-12-19  David N. Welton  <davidw@dedasys.com>

	* INSTALL: Updated install instructions.

	* genconf.sh: Shell script that may be used to generate the config
	stuff.

2004-12-18  David N. Welton  <davidw@dedasys.com>

	* tests/test-bmp-compare.tcl: New tests, thanks to Sheila Miguez.

	* images/*.bmp: Added some bitmap images from Sheila for the
	comparison test.

2004-12-16  David N. Welton  <davidw@dedasys.com>

	* generic/TkMagick.c (MagickToPhoto): Added ifdef'ed
	Tk_PhotoPutBlock to make things work with Tk 8.5.  Thanks to
	George Staplin for reporting the problem.

	* configure.ac: Bumped version number.

	* generic/Makefile.am (libTkMagick_la_CPPFLAGS): Added
	TK_XINCLUDES.  Thanks to George Staplin for reporting the problem.

	* generic/TclMagick.c (magickCmd): Only free the memory if
	necessary.  Thanks to David Zolli for reporting the problem.

	* generic/TclMagick.c: Fixed a few more, similar free'ing errors.

2004-11-06  David N. Welton  <davidw@dedasys.com>

	* generic/TkMagick.c: phototomagick's error message had the photo
	and wand arguments backwards.  Thanks to Sheila Miguez for
	catching this.  Also, make sure we have a wand before attempting
	to use it.

2004-09-20  David N. Welton  <davidw@dedasys.com>

	* doc/index.html: Update outdated information on
	graphics/imagemagick requirements.

	* configure.ac: New version: 0.42.

	* Makefile.am: Fiddled to get pkgIndex.tcl installed right.

	* tests/tkmagick.tcl (saveimage): Add image save proc and binding
	to test transformation of Tk images to magick want images.

	* generic/TkMagick.c (MagickToPhoto): Change map depending on